[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Maps/Map001.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Towers/kenney/towerDefense_tile249.png" type="Texture" id=2]
[ext_resource path="res://Assets/Towers/kenney/towerDefense_tile251.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Buttons/kenney/blue_button10.png" type="Texture" id=4]
[ext_resource path="res://Scenes/MainScenes/GameScene.gd" type="Script" id=5]
[ext_resource path="res://Scenes/MainScenes/UI.gd" type="Script" id=6]
[ext_resource path="res://Assets/UI/Art/kenney/metalPanel.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/kenneys/pause.png" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/kenneys/right.png" type="Texture" id=9]
[ext_resource path="res://Assets/Icons/kenneys/fastForward.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/Art/kenney/glassPanel.png" type="Texture" id=11]
[ext_resource path="res://Assets/Icons/kenneys/plus.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/Art/red_bar_001.png" type="Texture" id=13]
[ext_resource path="res://Assets/UI/Art/green_bar_001.png" type="Texture" id=14]
[ext_resource path="res://Resources/Fonts/kfn_50_o1.tres" type="DynamicFont" id=15]
[ext_resource path="res://Resources/Fonts/kfn_30_o1.tres" type="DynamicFont" id=16]
[ext_resource path="res://Scenes/MainScenes/GameCamera2D.gd" type="Script" id=17]
[ext_resource path="res://Scenes/MainScenes/InputHandler.gd" type="Script" id=18]

[node name="GameScene" type="Node2D"]
script = ExtResource( 5 )

[node name="Map001" parent="." instance=ExtResource( 1 )]

[node name="InputHandler" type="Node2D" parent="."]
script = ExtResource( 18 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 608, 352 )
current = true
limit_left = 0
limit_top = 0
script = ExtResource( 17 )

[node name="Tween" type="Tween" parent="Camera"]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="HUD" type="Control" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -720.0
margin_right = 1280.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildPanel" type="Panel" parent="UI/HUD"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -400.0
margin_right = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="UI/HUD/BuildPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildBar" type="VBoxContainer" parent="UI/HUD/BuildPanel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -400.0
margin_right = 100.0
rect_min_size = Vector2( 100, 400 )
mouse_filter = 0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filler" type="TextureRect" parent="UI/HUD/BuildPanel/BuildBar"]
margin_right = 100.0

[node name="Gun" type="TextureButton" parent="UI/HUD/BuildPanel/BuildBar" groups=["build_buttons"]]
margin_left = 10.0
margin_top = 15.0
margin_right = 90.0
margin_bottom = 95.0
rect_min_size = Vector2( 80, 80 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildPanel/BuildBar/Gun"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Missile" type="TextureButton" parent="UI/HUD/BuildPanel/BuildBar" groups=["build_buttons"]]
margin_left = 10.0
margin_top = 110.0
margin_right = 90.0
margin_bottom = 190.0
rect_min_size = Vector2( 80, 80 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildPanel/BuildBar/Missile"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Missile2" type="TextureButton" parent="UI/HUD/BuildPanel/BuildBar" groups=["build_buttons"]]
margin_left = 10.0
margin_top = 205.0
margin_right = 90.0
margin_bottom = 285.0
rect_min_size = Vector2( 80, 80 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildPanel/BuildBar/Missile2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Missile3" type="TextureButton" parent="UI/HUD/BuildPanel/BuildBar" groups=["build_buttons"]]
margin_left = 10.0
margin_top = 300.0
margin_right = 90.0
margin_bottom = 380.0
rect_min_size = Vector2( 80, 80 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildPanel/BuildBar/Missile3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayPanel" type="Panel" parent="UI/HUD"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -190.0
margin_top = -90.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( 180, 80 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="UI/HUD/PlayPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 11 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayBar" type="HBoxContainer" parent="UI/HUD/PlayPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -80.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filler" type="TextureRect" parent="UI/HUD/PlayPanel/PlayBar"]
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausePlay" type="TextureButton" parent="UI/HUD/PlayPanel/PlayBar"]
pause_mode = 2
margin_left = 10.0
margin_top = 5.0
margin_right = 80.0
margin_bottom = 75.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="FastForward" type="TextureButton" parent="UI/HUD/PlayPanel/PlayBar"]
margin_left = 90.0
margin_top = 5.0
margin_right = 160.0
margin_bottom = 75.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoBar" type="ColorRect" parent="UI/HUD"]
self_modulate = Color( 0, 0, 0, 0.470588 )
anchor_right = 1.0
rect_min_size = Vector2( 0, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H" type="HBoxContainer" parent="UI/HUD/InfoBar"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="Control" parent="UI/HUD/InfoBar/H"]
margin_right = 70.0
margin_bottom = 60.0
rect_min_size = Vector2( 70, 0 )

[node name="Symbol" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 74.0
margin_right = 134.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 15 )
text = "$"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 138.0
margin_right = 258.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 16 )
text = "99999"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthIcon" type="TextureRect" parent="UI/HUD/InfoBar/H"]
margin_left = 742.0
margin_right = 802.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 10
texture = ExtResource( 12 )
expand = true

[node name="HealthBar" type="TextureProgress" parent="UI/HUD/InfoBar/H"]
margin_left = 806.0
margin_top = 15.0
margin_right = 1206.0
margin_bottom = 45.0
rect_min_size = Vector2( 400, 30 )
size_flags_vertical = 4
value = 50.0
texture_under = ExtResource( 13 )
texture_progress = ExtResource( 14 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="UI/HUD/InfoBar/H/HealthBar"]

[node name="Padding2" type="Control" parent="UI/HUD/InfoBar/H"]
margin_left = 1210.0
margin_right = 1280.0
margin_bottom = 60.0
rect_min_size = Vector2( 70, 0 )

[connection signal="pressed" from="UI/HUD/PlayPanel/PlayBar/PausePlay" to="UI" method="_on_PausePlay_pressed"]
[connection signal="pressed" from="UI/HUD/PlayPanel/PlayBar/FastForward" to="UI" method="_on_FastForward_pressed"]
